--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -10,30 +11,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
-        <EditText
-            android:text="@={user.name}"
-            android:id="@+id/ac_main_edt_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/ac_main_edt_name_hint"
-            android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/ac_main_edt_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/ac_main_edt_phone_hint"
-            android:inputType="phone" />
+<androidx.recyclerview.widget.RecyclerView
+    bind:recyclerViewUser="@{user.arrayListMutableLiveData}"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-        <TextView
-            android:background="@color/colorAccent"
-            android:text="@{user.name}"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"/>
+</androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
 
